# yayin-projeleri

./: LICENSE  README.md
multimodal-rag-cli/: README.md  requirements.txt  temp.py
multimodal-rag-embed-2/: main.py  pyproject.toml  test_main.py
multimodal-rag-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_query.py
multimodal-rag-fastapi/app/: main.py
multimodal-rag-fastapi/app/api/: routes.py
multimodal-rag-fastapi/app/core/: config.py
multimodal-rag-fastapi/app/services/: rag_service.py
multimodal-rag-fastapi/frontend/: Dockerfile  eslint.config.js  package.json
multimodal-rag-fastapi/frontend/src/: App.tsx
multimodal-rag-fastapi/frontend/src/components/common/: Button.tsx  Card.tsx
multimodal-rag-fastapi/frontend/src/components/features/: EmbedSection.tsx  MessageBubble.tsx  QuerySection.tsx  UploadZone.tsx
multimodal-rag-fastapi/frontend/src/components/layout/: Header.tsx  Layout.tsx
multimodal-rag-fastapi/frontend/src/services/: api.ts
multimodal-rag-fastapi/tests/: test_api.py  test_services.py
